# plover-maajik

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
docs/: README.md  cangjie.md  phonetics.md  phrasing.md  punctuation.md
maajik/: system.py
maajik/dictionaries/: briefs.json  cangjie.json  cangjie.py  commands.json  punctuation.json
