[metadata]
name = plover_cantonese_maajik
description = Cantonese steno system plugin for Plover
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev11
  plover_stroke>=1.0
  pycantonese>=3.4.0
packages =
  maajik

[options.entry_points]
plover.system =
  Cantonese MaaJik = maajik.system
