[metadata]
name = plover_maajik
version = 1.0.0-beta1
description = Cantonese steno system plugin for Plover
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev11
packages =
  maajik

[options.entry_points]
plover.system =
  Cantonese MaaJik = maajik.system
